<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fondo2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_ver"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:id="@+id/tit_receta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/titulo_receta"
                android:inputType="textPersonName"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personas"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_overlay"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/personas_receta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_overlay"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/cattegoria_receta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_overlay"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="Minutos" />

        </LinearLayout>

        <EditText
            android:id="@+id/prep_receta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/prepa" />

        <Button
              android:id="@+id/guardar_receta"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/button_ver"
              android:text="@string/guardar"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/vegLetra"
              android:layout_marginTop="5dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:layout_weight="1" />
        
    </LinearLayout>

</ScrollView>