<?xml version="1.0" encoding="utf-8"?>    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MapActivity">
	
	    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/map"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" />
	
	    <LinearLayout
	        android:id="@+id/lly"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:layout_centerInParent="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        >
			<ImageButton 
			    android:id="@+id/ib_restaurant"
			    android:contentDescription="@string/ib_restaurant"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/imagebutton_selector"
	            android:onClick="botonFuncion"
	            android:src="@drawable/restaurant"            
	            android:layout_marginBottom="10dp"/>
			
			<ImageButton 
			    android:id="@+id/ib_local"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/ib_local"
	            android:background="@drawable/imagebutton_selector"
	            android:onClick="botonFuncion"
	            android:src="@drawable/local"
	            android:layout_marginBottom="10dp"/>
			
	    </LinearLayout>
	    <ImageButton 
			android:id="@+id/ib_geolocalize"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/ib_geolocalize"
			android:background="@drawable/imagebutton_selector"
			android:onClick="botonFuncion"
			android:src="@drawable/geolocalize"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="10dp"
			android:layout_marginBottom="30dp"/>
	    
</RelativeLayout> 