<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView 
        android:id="@+id/titulo_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_local"
        android:textColor="@color/vegLetra"
        android:padding="10dp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <View
        android:id="@+id/divider1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/vegLetraEsp"
        android:layout_below="@id/titulo_nombre" />
    
    <EditText 
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/divider1">
        
        <requestFocus />
	</EditText>
	
    
    
    <TextView 
        android:id="@+id/titulo_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nombre"
        android:text="@string/descripcion"
        android:textColor="@color/vegLetra"
        android:padding="10dp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <View
        android:id="@+id/divider2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/vegLetraEsp"
        android:layout_below="@id/titulo_descripcion" />
    
    <EditText 
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/divider2"/>
    
    <TextView 
        android:id="@+id/titulo_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productos"
        android:padding="10dp"
        android:textColor="@color/vegLetra"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/et_descripcion" />
    
    <View
        android:id="@+id/divider3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/vegLetraEsp"
        android:layout_below="@id/titulo_productos" />
    
    
    <ImageButton
        android:id="@+id/ib_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_agregar"
        android:src="@drawable/add"
        android:layout_alignParentRight="true"
        android:layout_below="@id/titulo_productos"/>
    
    <ListView 
        android:id="@+id/lv_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_agregar"/>


</RelativeLayout>