<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_container" >
    <LinearLayout 
        android:id="@+id/ll_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        
	    <com.parse.ParseImageView
	        android:id="@+id/icon"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:layout_marginLeft="15dip"
	        android:layout_marginRight="15dip" />
	    
	    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
         />
	    
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/ll_ingresarPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_precio"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">
	    
	    <TextView
	        android:id="@+id/precio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="21sp"
	        android:text="@string/precio" />
	    
	    
	    <EditText 
	        android:id="@+id/et_precio"
	        android:inputType="number"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content" />
	    
    </LinearLayout>
    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_below="@id/ll_ingresarPrecio">

        <Button
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/aceptar"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/cancelar"
            android:textColor="@android:color/white" />
    </LinearLayout>
    

</RelativeLayout>
