<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="nomReceta"
            android:textColor="@color/vegLetra"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.parse.ParseImageView
        android:id="@+id/iv_imag_receta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher2" />
        

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_action_group" />

            <TextView
                android:id="@+id/personas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView2"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/personas"
                android:src="@drawable/ic_action_time" />

            <TextView
                android:id="@+id/tiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/personas"
                android:layout_alignBottom="@+id/personas"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView3"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="17dp"
                android:layout_toRightOf="@+id/tiempo"
                android:src="@drawable/ic_action_important" />

            <TextView
                android:id="@+id/valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/personas"
                android:layout_alignBottom="@+id/personas"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView4"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparacion"
            android:textColor="@color/vegLetraEsp"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
    		android:layout_width="fill_parent"
    		android:layout_height="1dp"
    		android:layout_marginRight="5dp"
    		android:layout_marginLeft="5dp"
    		android:background="@color/vegLetraEsp"/>
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ingredientes"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/vegLetraEsp" />

            <Button
                android:id="@+id/ver_alimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@+id/textView5"
                android:background="@drawable/button_ver"
                android:text="@string/ver"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/vegLetra" />

        </RelativeLayout>
        <View
    		android:layout_width="fill_parent"
    		android:layout_height="1dp"
    		android:layout_marginRight="5dp"
    		android:layout_marginLeft="5dp"
    		android:background="@color/vegLetraEsp"/>
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ver_comentarios"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_ver"
                android:text="@string/comentarios"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/vegLetra" />

            
        </RelativeLayout>

       <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:orientation="vertical" >
            </LinearLayout> 
        
    </LinearLayout>
    

</ScrollView>
